--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -17,8 +17,8 @@
     {% include "@organisms/listings/teaser-list/teaser-list.twig" with {
         "teasers": providers,
       } %}
-    {% include "@molecules/pagination/pagination.twig" %}
-    {% include "@organisms/listings/listing-cta/listing-cta.twig" with {
+    {% include "@molecules/pager/pager.twig" %}
+    {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
         "title": cta.title,
         "text": cta.text,
         "link": cta.link,
