--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.twig
@@ -38,7 +38,10 @@
         <li class="pager__item pager__item--previous">
           <a class="pager__link pager__link--prev"  href="{{ items.previous.href }}" title="{{ 'Go to previous page'|t }}" rel="prev"{{ items.previous.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Previous page'|t }}</span>
-            <span aria-hidden="true">{{ items.previous.text|default('‹ Previous'|t) }}</span>
+            <span>
+              {% include "arrow-prev.svg" %}
+              {{ items.previous.text|default('Previous'|t) }}
+            </span>
           </a>
         </li>
       {% endif %}
@@ -71,7 +74,10 @@
         <li class="pager__item pager__item--next">
           <a class="pager__link pager__link--next" href="{{ items.next.href }}" title="{{ 'Go to next page'|t }}" rel="next"{{ items.next.attributes|without('href', 'title', 'rel') }}>
             <span class="visually-hidden">{{ 'Next page'|t }}</span>
-            <span aria-hidden="true">{{ items.next.text|default('Next ›'|t) }}</span>
+            <span>
+              {{ items.next.text|default('Next'|t) }}
+              {% include "arrow-next.svg" %}
+            </span>
           </a>
         </li>
       {% endif %}
