--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/_basic-header.scss
@@ -15,6 +15,10 @@
   flex-direction: column;
   padding-top: 1em;
   padding-bottom: 2em;
+  
+  .basic-header--list & {
+    padding-bottom: 0;
+  }
 }
 
 .basic-header__content {
