--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-location.twig
@@ -15,11 +15,13 @@
   {% endblock %}
 
   {% block page_content %}
+    
+    
     {% include "@organisms/listings/teaser-list/teaser-list.twig" with {
         "teasers": locations,
       } %}
-    {% include "@molecules/pagination/pagination.twig" %}
-    {% include "@organisms/listings/listing-cta/listing-cta.twig" with {
+    {% include "@molecules/pager/pager.twig" %}
+    {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
         "title": cta.title,
         "text": cta.text,
         "link": cta.link,
