--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
@@ -1,10 +1,18 @@
-<div class="listing-cta js-section-animation">
-  <div class="listing-cta__title">{{ title }}</div>
-  <p class="listing-cta__text">{{ text }}</p>
-  {% include "@atoms/icon-button/icon-button.twig" with {
-    "url": link.url,
-    "icon": link.icon,
-    "text": link.text,
-    "class": link.class,
-  } %}
+<div class="anchored-cta-block js-section-animation">
+  <div class="grid">
+    <div class="anchored-cta-block__content">
+      <h2 class="anchored-cta-block__title">{{ title }}</h2>
+      <div class="anchored-cta-block__text">
+        {{ text }}
+      </div>
+    </div>
+    <div class="anchored-cta-block__buttons">
+      {% include "@atoms/icon-button/icon-button.twig" with {
+        "url": link.url,
+        "icon": link.icon,
+        "text": link.text,
+        "class": "right"
+      } %}
+    </div>
+  </div>
 </div>
