--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -187,7 +187,7 @@
   .cta-banner-list__content,
   .cta-banner-list__background,
   .cta-banner-list__buttons,
-  .icon-button {
+  .cta-banner-list__buttons .icon-button {
     opacity: 0;
   }
   
