--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
@@ -8,6 +8,8 @@
   border-radius: 8px;
   border: 4px solid $trust-aa;
   font-weight: 500;
+  display: block;
+  width: 100%;
   
   &--secondary {
     background-color: transparent;
