--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -3,6 +3,12 @@
     Showing {{ results_shown}} of {{ results_count }} results{% if results_term %} for "<strong>{{ results_term }}</strong>"{% endif %}.
   </div>
   
+  {% if emergency_banner %}
+  {% include "@molecules/banner-message/banner-message.twig" with {
+    banner_text: emergency_banner
+  } %}
+  {% endif %}
+  
   {% for teaser in teasers %}
     {% if teaser.type == "provider" %}
       {% include "@organisms/teasers/provider-teaser/provider-teaser.twig" with {
