TH-321 add article teaser

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -8,6 +8,10 @@
       {% include "@organisms/teasers/location-teaser/location-teaser.twig" with {
           "location": teaser,
         } %}
+    {% elseif teaser.type == "article" %}
+      {% include "@organisms/teasers/article-teaser/article-teaser.twig" with {
+          "article": teaser,
+        } %}
     {% endif %}
   {% endfor %}
 </div>
