--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -6,17 +6,17 @@
   position: relative;
   text-align: center;
   width: 100%;
-  
+
   @include breakpoint($bp2) {
     text-align: left;
     margin-top: 50px;
   }
-  
+
   @include breakpoint($bp3) {
     margin: 2em 0 2em 150px;
     padding: 2em 3em 2em 5em;
   }
-  
+
   @include breakpoint($bp4) {
     padding: 2em 3em 2em 6em;
   }
@@ -26,7 +26,7 @@
   display: inline-block;
   position: relative;
   margin: -100px auto 1em;
-  
+
   &::after {
     position: absolute;
     top: -10px;
@@ -39,29 +39,29 @@
     border-radius: 50%;
     z-index: 1;
   }
-  
+
   @include breakpoint($bp2) {
     margin: -75px 0 0;
     float: right;
-    
+
     &::after {
       height: 155px;
       width: 155px;
     }
   }
-  
+
   @include breakpoint($bp3) {
     position: absolute;
     margin: 0;
     left: -140px;
     top: -0.5em;
-    
+
     &::after {
       height: 205px;
       width: 205px;
     }
   }
-  
+
   @include breakpoint($bp4) {
     &::after {
       height: 230px;
@@ -77,42 +77,42 @@
   overflow: hidden;
   border-radius: 150px;
   z-index: 3;
-  
+
   a {
     display: block;
     height: 175px;
     width: 175px;
   }
-  
+
   img {
     width: 100%;
     object-fit: cover;
   }
-  
+
   @include breakpoint($bp2) {
     height: 150px;
     width: 150px;
-    
+
     a {
       height: 150px;
       width: 150px;
     }
   }
-  
+
   @include breakpoint($bp3) {
     height: 200px;
     width: 200px;
-    
+
     a {
       height: 200px;
       width: 200px;
     }
   }
-  
+
   @include breakpoint($bp4) {
     height: 225px;
     width: 225px;
-    
+
     a {
       height: 225px;
       width: 225px;
@@ -128,13 +128,13 @@
   background-color: $white;
   margin-top: 0;
   margin-bottom: .25em;
-  
+
   a:link,
   a:visited {
     color: $primary-dark;
     text-decoration: none;
   }
-  
+
   a:active,
   a:hover,
   a:focus {
@@ -146,7 +146,7 @@
     margin-top: 1em;
     width: calc(100% - 225px);
   }
-  
+
   @include breakpoint($bp3) {
     display: inline-block;
     width: auto;
@@ -159,11 +159,11 @@
 
 .teaser__content {
   text-align: left;
-  
+
   @include breakpoint($bp2) {
     clear: both;
   }
-  
+
   @include breakpoint($bp3) {
     display: flex;
     flex-wrap: nowrap;
@@ -180,7 +180,7 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
-  
+
   @include breakpoint($bp3) {
     clear: none;
     padding-left: 1em;
@@ -190,14 +190,19 @@
 
 .teaser__section {
   margin-bottom: .5em;
-  
+
   @include breakpoint($bp1) {
     width: 48%;
   }
-  
+
   @include breakpoint($bp3) {
     margin-bottom: .25em;
   }
+}
+
+.teaser__section--full {
+  width: 100%;
+  margin-top: .5em;
 }
 
 .teaser__section--small {
@@ -207,12 +212,13 @@
 .teaser__button {
   margin: 1em auto -4em;
   width: 310px;
-  
+
   @include breakpoint($bp2) {
     margin: 1em 0 -4em;
   }
 
   @include breakpoint($bp3) {
+    min-width: 250px;
     width: 250px;
     padding-top: 0;
     margin: 0;
@@ -233,16 +239,31 @@
   text-transform: uppercase;
   margin-bottom: .25em;
   margin-top: .5em;
-  
+
   &::first-child {
     margin-top: 0;
   }
+}
+
+.teaser-tag {
+  padding: .25em .5em;
+  margin-right: .25em;
+  background-color: $off-white;
+  border-radius: 5px;
 }
 
 .teaser.location {
   .teaser__image-container {
     &::after {
       background-color: $trust;
+    }
+  }
+}
+
+.teaser.article {
+  .teaser__image-container{
+    &::after {
+      background-color: $wisdom;
     }
   }
 }
