TH-321 add basic teaser

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -12,6 +12,10 @@
       {% include "@organisms/teasers/article-teaser/article-teaser.twig" with {
           "article": teaser,
         } %}
+    {% else %}
+      {% include "@organisms/teasers/basic-teaser/basic-teaser.twig" with {
+          "basic": teaser,
+        } %}
     {% endif %}
   {% endfor %}
 </div>
