--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/_teaser.scss
@@ -268,6 +268,14 @@
   }
 }
 
+.teaser.basic {
+  .teaser__image-container{
+    &::after {
+      background-color: $tranquil;
+    }
+  }
+}
+
 .teaser__row {
   display: block;
 }
