add in a bunch of markdown files and remove some unused templates

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/status/_status.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/status/_status.scss
@@ -1,9 +1,9 @@
 // See http://refills.bourbon.io/components/#flashes.
 $base-spacing: 1.5em !default;
 $statuses: (
-  "warning": #f9fb93,
-  "error": #fbe3e4,
-  "status": #cfefc2,
+  "warning": $uplifting-ltst,
+  "error": rgba($ed, .5),
+  "status": $growth-ltst,
 ) !default;
 
 @each $status-type, $color in $statuses {
