--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/listing-search/listing-search.twig
@@ -3,5 +3,5 @@
     <label>{{ label }}</label>
     <input type="text" placeholder="{{ placeholder }}" />
   </div>
-  <a href="/" class="button button-primary">{{ button }}</a>
+  <input type="submit" value="{{ button }}" class="button button-primary"/>
 </form>
