--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pager/pager.scss
@@ -3,7 +3,9 @@
 }
 
 .pager__items {
-  @include list-reset;
+  list-style: none;
+  margin: 0;
+  padding: 0;
   display: flex;
   align-items: center;
   justify-content: center;
