--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -6,6 +6,14 @@
   </div>
   <h2 class="teaser__name"><a href="{{ url }}">{{ provider.details.name }}</a></h2>
   
+  {% if provider.details.rating %}
+  <div class="teaser__rating">
+    {% include "@molecules/ratings-count/ratings-count.twig" with {
+      "rating": provider.details.rating
+    } %}
+  </div>
+  {% endif %}
+  
   <div class="teaser__content">
     <div class="teaser__content__info">
       <div class="teaser__section">
