--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/image-teaser-banner/_image-teaser-banner.scss
@@ -7,7 +7,7 @@
     margin-bottom: 2em;
     padding-top: 3em;
     padding-bottom: 3em;
-    
+
     .image-teaser--reverse & {
       display: flex;
     }
@@ -30,7 +30,7 @@
     left: 40%;
     overflow: hidden;
     width: auto;
-    
+
     img {
       min-height: 100%;
       min-width: 100%;
@@ -38,7 +38,7 @@
       width: auto;
       object-fit: cover;
     }
-    
+
     .image-teaser--reverse & {
       left: 2em;
       right: 40%;
@@ -55,12 +55,13 @@
   border-radius: 5px;
   box-shadow: 0 2px 8px rgba($black, 0.15);
   z-index: 2;
+  margin-bottom: 2em;
 
   @include breakpoint($bp1) {
     padding: 2em 2em 2.5em 2em;
     margin-top: -4em;
   }
-  
+
   @include breakpoint($bp2) {
     margin-top: -6em;
   }
@@ -69,7 +70,7 @@
     padding: 3em 3em 3.5em 3em;
     width: 70%;
     margin: 0;
-    
+
     .image-teaser--reverse & {
       margin-left: auto;
     }
@@ -78,11 +79,11 @@
   @include breakpoint($bp4) {
     width: 60%;
   }
-  
+
   @include breakpoint($bp5) {
     width: 50%;
   }
-  
+
   a.button {
     position: absolute;
     right: 10%;
@@ -107,7 +108,7 @@
   margin-top: 1em;
   margin-right: 1em;
   text-decoration: none;
-  
+
   &:active,
   &:hover,
   &:focus {
