move mytowerhealth link above main nav at mobile.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/main-menu/_00-main-menu.scss
@@ -28,6 +28,14 @@
   }
 }
 
+.main-nav {
+  padding-top: 45px; 
+  
+  @include breakpoint($bp3) {
+    padding-top: 0;
+  }
+}
+
 // UL
 .main-menu:not(.main-menu--sub) {
   @include list-reset;
