--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -134,6 +134,13 @@
   background-repeat: no-repeat;
   background-position: center;
   
+  @include breakpoint(0 899px) {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: .5em;
+  }
+  
   &:link,
   &:visited {
     color: transparent;
