update base link style, include italic, link, and bold examples on basic page

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_04-base.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_04-base.scss
@@ -39,12 +39,12 @@ a:visited {
 
 a:active,
 a:hover {
-  color: $trust-aa;
+  color: $primary-dark;
   text-decoration: underline;
 }
 
 a:focus {
-  color: $trust-aa;
+  color: $primary-dark;
   text-decoration: underline;
 }
 
