--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/01-paragraph.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/01-paragraph.twig
@@ -15,6 +15,6 @@
 
 <p {{ bem(paragraph_base_class, (paragraph_modifiers), paragraph_blockname) }}>
   {% block paragraph_content %}
-    {{ paragraph_content }}
+    {{ paragraph_content|raw }}
   {% endblock %}
 </p>
