--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -14,6 +14,8 @@
   <script src="../../../../dist/02-molecules/menus/main-menu/main-menu.js"></script>
   <script src="../../../../dist/02-molecules/autocomplete-dropdown/autocomplete.js"></script>
   <script src="../../../../dist/02-molecules/toggle-tip/toggle-tip.js"></script>
+  
+  <script src="../../../../dist/03-organisms/form-section/form-conditional.js"></script>
 
   </body>
 </html>
