--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -1,11 +1,15 @@
 .form-section {
-  margin: 4em 0 6em;
+  margin: 6em 0 1em;
   
   @include breakpoint($bp2) {
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
+  }
+  
+  &:first-child {
+    margin-top: 4em;
   }
 }
 
@@ -24,6 +28,11 @@
   input,
   select {
     margin-bottom: 0;
+  }
+  
+  &--conditional {
+    display: none;
+    visibility: hidden;
   }
   
   &--half {
