--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/banner-message/_banner-message.scss
@@ -3,17 +3,14 @@
   margin: .5em 0 1em;
   padding: 1em;
   text-align: center;
-  background-color: $trust-aa;
-  color: $white;
+  background-color: $off-white;
   border-radius: 8px;
-  border: 4px solid $trust-aa;
-  font-weight: 500;
+  font-weight: 300;
   
   &--secondary {
     background-color: transparent;
-    color: $gray-dark;
-    border-color: $trust-ltst;
-    font-weight: 300;
+    border: 4px solid $trust-ltst;
+    font-weight: 600;
   }
 }
 
