--- a/docroot/themes/custom/tower_health/components/_patterns/_print.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/_print.scss
@@ -104,7 +104,7 @@
     .cta-banner-list__buttons,
     .icon-button,
     .homepage-hero__image,
-    .teaser {
+    .teaser, 
     .link-list__title,
     .link-list__link,
     .location-hero__content,
