--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/_teaser-list.scss
@@ -1,5 +1,13 @@
 .teaser-list {
   @include grid;
+  
+  .listing-results + .banner-message {
+    margin-top: -1em;
+  }
+  
+  .banner-message {
+    margin-bottom: 3em;
+  }
 }
 
 .listing-results {
