fix icon button (merge resolution)

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/anchored-cta-block/anchored-cta-block.twig
@@ -11,7 +11,7 @@
         "url": link.url,
         "icon": link.icon,
         "text": link.text,
-        "class": "right"
+        "variation": "right"
       } %}
     </div>
   </div>
