--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/basic-teaser/basic-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/basic-teaser/basic-teaser.twig
@@ -1,25 +1,8 @@
-<div class="teaser basic js-section-animation">
+<div class="teaser--simple basic js-section-animation">
 
-  <div class="teaser__image-container">
-    <div class="teaser__image">
-      <a href="{{ url }}"><img src="{% if article.img %}{{ article.img.src }}{% else %}../../images/people/provider-placeholder.png{% endif %}" alt="{{ article.img.alt }}"></a>
-    </div>
-  </div>
+  <h2 class="teaser__name--simple"><a href="{{ url }}">{{ basic.details.title }}</a></h2>
 
-  <h2 class="teaser__name"><a href="{{ url }}">{{ basic.details.title }}</a></h2>
-
-  <div class="teaser__content">
-    <div class="teaser__content__info">
-      <div class="teaser__section--full">
-        {{ basic.details.text }}
-      </div>
-    </div>
-    <div class="teaser__button">
-      {% include "@atoms/icon-button/icon-button.twig" with {
-        "url": basic.link.url,
-        "icon": basic.link.icon,
-        "text": basic.link.text,
-      } %}
-    </div>
+  <div class="teaser__content--simple">
+    {{ basic.details.text }}
   </div>
 </div>
