Almost "eureka" moment on the pattern lab side, Drupal linking is coming next.

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/footer-social-menu/footer-social-menu.twig
@@ -32,16 +32,16 @@
   {% if items %}
 
     {% for item in items %}
-      <div class="footer__links__section">
-        <a class="footer__links__section__title" href="{{ item.url }}">
-          {{ item.title }}
-        </a>
-        {% if item.below %}
-          {% for link in item.below %}
-            <a href="{{ link.url }}">{{ link.title }}</a>
-          {% endfor %}
-        {% endif %}
-      </div>
+
+
+
+          {% include "@atoms/social-icon/social-icon.twig" with {
+            "svg": item.field_social_icon,
+            "url": item.url
+          } %}
+
+
+
     {% endfor %}
   {% endif %}
 {% endmacro %}
