add in a modal library and create a modal molecule

--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -6,6 +6,7 @@
   <script src="../../js/modernizr.js"></script>
   <script src="../../js/modernizr-custom.js"></script>
   <script src="../../js/drupal-attach-behaviors.js"></script>
+  <script src="../../js/modaal.js"></script>
 
   <!-- Add any global javascript that will not use attach_library here -->
   <script src="../../../../dist/00-base/global/animations/animation.js"></script>
@@ -19,6 +20,7 @@
   <script src="../../../../dist/01-atoms/05-forms/chosen/chosen.jquery.js"></script>
   <script src="../../../../dist/01-atoms/05-forms/chosen/chosen-select.js"></script>
   <script src="../../../../dist/03-organisms/listings/listing-filter/listing-filters.js"></script>
+  <script src="../../../../dist/02-molecules/modal/modal.js"></script>
 
   </body>
 </html>
