--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -19,7 +19,8 @@
       {% include "@atoms/icon-button/icon-button.twig" with {
         "url": link.url,
         "icon": link.icon,
-        "text": link.text, 
+        "text": link.text,
+        "animated": "true" 
       } %}
     {% endfor %}
   </div>
