--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/listings/teaser-list/teaser-list.twig
@@ -2,13 +2,13 @@
   <div class='listing-results'>
     Showing {{ results_shown}} of {{ results_count }} results{% if results_term %} for "<strong>{{ results_term }}</strong>"{% endif %}.
   </div>
-  
+
   {% if emergency_banner %}
   {% include "@molecules/banner-message/banner-message.twig" with {
     banner_text: emergency_banner
   } %}
   {% endif %}
-  
+
   {% for teaser in teasers %}
     {% if teaser.type == "provider" %}
       {% include "@organisms/teasers/provider-teaser/provider-teaser.twig" with {
@@ -21,6 +21,10 @@
     {% elseif teaser.type == "article" %}
       {% include "@organisms/teasers/article-teaser/article-teaser.twig" with {
           "article": teaser,
+        } %}
+    {% elseif teaser.type == "service" %}
+      {% include "@organisms/teasers/service-teaser/service-teaser.twig" with {
+          "service": teaser,
         } %}
     {% else %}
       {% include "@organisms/teasers/basic-teaser/basic-teaser.twig" with {
