TH-321 switch to small icon button

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -1,11 +1,11 @@
 <div class="teaser location js-section-animation">
-  
+
   <div class="teaser__image-container">
     <div class="teaser__image">
       <a href="{{ url }}"><img src="{% if location.img %}{{ location.img.src }}{% else %}../../images/people/provider-placeholder.png{% endif %}" alt="{{ location.img.alt }}"></a>
     </div>
   </div>
-  
+
   <h2 class="teaser__name"><a href="{{ url }}">{{ location.details.name }}</a></h2>
 
   <div class="teaser__content">
@@ -27,6 +27,7 @@
         "url": location.link.url,
         "icon": location.link.icon,
         "text": location.link.text,
+        "variation": location.link.variation,
       } %}
     </div>
   </div>
