--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -21,7 +21,7 @@
     {% include "@organisms/anchored-cta-block/anchored-cta-block.twig" with {
         "title": cta.title,
         "text": cta.text,
-        "link": cta.link,
+        "link": cta.link
       } %}
   {% endblock %}
 
