--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -6,12 +6,21 @@
   max-width: 1500px;
 
   @include breakpoint($bp2) {
-    padding: 70px 2em 0;
+    padding: 70px 0 0;
   }
 
   @include breakpoint($bp3) {
-    padding: 0 2em;
+    padding: 0;
     margin: 3em auto;
+  }
+}
+
+.location-hero__container {
+  max-width: 1500px;
+  width: 100%;
+  
+  @include breakpoint($bp2) {
+    padding: 0 2em;
   }
 }
 
@@ -22,7 +31,7 @@
   border-bottom: 4px solid $trust-ltr;
   border-radius: 0 5px 5px 0;
   width: 96%;
-  padding: 2rem 1rem 2rem 2rem;
+  padding: 2em 1em 2em 2em;
   box-shadow: 0 2px 8px rgba($black, 0.15);
   position: relative;
   z-index: 1;
@@ -34,7 +43,7 @@
   @include breakpoint($bp2) {
     border: 4px solid $trust-ltr;
     border-radius: 5px;
-    padding: 3rem 2rem;
+    padding: 3em 2em;
     width: 100%;
   }
 
@@ -43,6 +52,8 @@
     position: static;
     border-radius: 8px;
     background-color: transparent;
+    padding-right: 28%;
+    width: 80%;
   }
   
   &.image {
@@ -101,8 +112,8 @@
     content: '';
     display: block;
     position: absolute;
-    width: 4.5rem;
-    left: -4.5rem;
+    width: 5.25em;
+    left: -5.25em;
     top: 0;
     bottom: 0;
     background-color: $trust;
@@ -221,8 +232,14 @@
     }
   }
 
-  @include breakpoint($bp5) {
-    right: calc(( 100vw - 1365px ) / 2 * -1);
+  @include breakpoint($bp6) {
+    right: calc(( 100vw - 1550px ) / 2 * -1);
+    top: -4em;
+    left: 55%;
+    
+    .image-background {
+      max-width: 650px;
+    }
   }
 }
 
