adjust location hero for new grid

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
@@ -20,7 +20,7 @@
       directions: hero.directions,
       phones: hero.phones,
       img: hero.img,
-      classes: hero.classes,
+      classes: hero.classes
     } %}
   {% endblock %}
 
