--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-landing.twig
@@ -13,15 +13,14 @@
         } %}
     {% endif %}
     {% include "@organisms/location-hero/location-hero.twig" with {
-        type: hero.type,
-        name: hero.name,
-        address_1: hero.address_1,
-        address_2: hero.address_2,
-        directions: hero.directions,
-        phone: hero.phone,
-        numbers: hero.numbers,
-        img: hero.img,
-        classes: hero.classes,
+      type: hero.type,
+      name: hero.name,
+      address_1: hero.address_1,
+      address_2: hero.address_2,
+      directions: hero.directions,
+      phones: hero.phones,
+      img: hero.img,
+      classes: hero.classes
       } %}
   {% endblock %}
 
