TH-321 add filters

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -5,11 +5,10 @@
 
   {% block page_header %}
     {% include "@organisms/basic-header/basic-header.twig" with {
-      breadcrumb: header.breadcrumb
-    } %}
+        breadcrumb: header.breadcrumb
+      } %}
     {% include "@organisms/listings/listing-filter/listing-filter.twig"  with {
-      filters: filters,
-      filter_radios: filter_radios
+        form_sections: form_sections
       } %}
   {% endblock %}
 
