--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/location-teaser/location-teaser.twig
@@ -27,7 +27,7 @@
         "url": location.link.url,
         "icon": location.link.icon,
         "text": location.link.text,
-        "variation": location.link.variation,
+        "variation": "small",
       } %}
     </div>
   </div>
