--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -39,7 +39,7 @@
         "url": provider.link.url,
         "icon": provider.link.icon,
         "text": provider.link.text,
-        "variation": provider.link.variation,
+        "variation": "small",
       } %}
     </div>
    {% endif %}
