create a modified style for icon buttons for the homepage list banner.

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
@@ -57,6 +57,10 @@
       }
     }
   }
+  
+  &.icon-button--list {
+    margin-left: 2em;
+  }
 
   &.icon-button--small {
     @include adjust-font-size-to($sm-text, .75);
