--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -20,7 +20,8 @@
         "url": link.url,
         "icon": link.icon,
         "text": link.text,
-        "animated": "true" 
+        "animated": "true",
+        "variation": "list" 
       } %}
     {% endfor %}
   </div>
